--- a/.swagger-codegen-ignore
+++ b/.swagger-codegen-ignore
@@ -6,7 +6,7 @@
 
 # As an example, the C# client generator defines ApiClient.cs.
 # You can make changes and tell Swagger Codgen to ignore just this file by uncommenting the following line:
-rsa_controller.py
+swagger_server/controllers/rsa_controller.py
 
 # You can match any string of characters against a directory, file or extension with a single asterisk (*):
 #foo/*/qux
